Ajout favicon, changement de titre et delete media query 390px

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,11 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+<!-- insertion du favicon : pas de type car c'est en format .ico Egalement, maintenir le "rel"=icon -->
+ 
+    <link rel="icon" href="public/favicon(1).ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Monorepo</title>
+    <title>WeArt</title>
   </head>
   <body>
     <div id="root"></div>
